Fix leading spaces being collapsed in descriptions
Fixes #1954

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -540,7 +540,8 @@ p,
 }
 
 #descriptionWrapper {
-       max-width: 600px;
+	max-width: 600px;
+	white-space: pre-wrap;
 }
 
 /* Center the "invidious" logo on the search page */
